feature: Get number of favourites